--- a/Fit_to_function.ipynb
+++ b/Fit_to_function.ipynb
@@ -132,13 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The watermark extension is already loaded. To reload it, use:\n",
+      "  %reload_ext watermark\n",
       "Python implementation: CPython\n",
       "Python version       : 3.9.15\n",
       "IPython version      : 8.7.0\n",
@@ -150,7 +152,25 @@
       "matplotlib: 3.6.2\n",
       "pandas    : 1.5.2\n",
       "\n",
-      "Last updated: Sun Mar 26 2023 16:27:25Mitteleuropäische Sommerzeit\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.9.15\n",
+      "IPython version      : 8.7.0\n",
+      "\n",
+      "numpy     : 1.23.5\n",
+      "scipy     : 1.8.1\n",
+      "matplotlib: 3.6.2\n",
+      "pandas    : 1.5.2\n",
+      "watermark : 2.3.1\n",
+      "\n",
+      "Compiler    : MSC v.1916 64 bit (AMD64)\n",
+      "OS          : Windows\n",
+      "Release     : 10\n",
+      "Machine     : AMD64\n",
+      "Processor   : Intel64 Family 6 Model 142 Stepping 11, GenuineIntel\n",
+      "CPU cores   : 8\n",
+      "Architecture: 64bit\n",
+      "\n",
+      "Last updated: Sun Mar 26 2023 16:31:54Mitteleuropäische Sommerzeit\n",
       "\n"
      ]
     }
@@ -160,6 +180,7 @@
     "%watermark -v\n",
     "%watermark --conda\n",
     "%watermark --iversions\n",
+    "%watermark -v -m -p numpy,scipy,matplotlib,pandas,watermark\n",
     "%watermark -u -n -t -z"
    ]
   },
