--- a/Fit_to_function.ipynb
+++ b/Fit_to_function.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +68,12 @@
     "plt.ylabel('y')\n",
     "# show the plot\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +96,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# fit the function\n",
     "a_init = 1\n",
     "b_init = 1\n",
@@ -118,8 +115,7 @@
     "plt.ylabel('y')\n",
     "# show the plot\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,10 +143,10 @@
       "\n",
       "conda environment: python3915\n",
       "\n",
-      "numpy     : 1.23.5\n",
-      "scipy     : 1.8.1\n",
-      "matplotlib: 3.6.2\n",
       "pandas    : 1.5.2\n",
+      "numpy     : 1.23.5\n",
+      "matplotlib: 3.6.2\n",
+      "scipy     : 1.8.1\n",
       "\n",
       "Python implementation: CPython\n",
       "Python version       : 3.9.15\n",
@@ -170,7 +166,7 @@
       "CPU cores   : 8\n",
       "Architecture: 64bit\n",
       "\n",
-      "Last updated: Sun Mar 26 2023 16:31:54Mitteleuropäische Sommerzeit\n",
+      "Last updated: Sun Mar 26 2023 16:41:00Mitteleuropäische Sommerzeit\n",
       "\n"
      ]
     }
@@ -183,13 +179,6 @@
     "%watermark -v -m -p numpy,scipy,matplotlib,pandas,watermark\n",
     "%watermark -u -n -t -z"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
